--- a/com.gyzh.zain.hadoopapi/.classpath
+++ b/com.gyzh.zain.hadoopapi/.classpath
@@ -103,12 +103,12 @@
 	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/lib/asm-3.2.jar"/>
 	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/lib/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-shuffle-2.7.3.jar"/>
-	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.7.3.jar"/>
+	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.7.3.jar" sourcepath="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/sources/hadoop-mapreduce-client-jobclient-2.7.3-sources.jar"/>
 	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-plugins-2.7.3.jar"/>
 	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-2.7.3.jar"/>
-	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-core-2.7.3.jar"/>
+	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-core-2.7.3.jar" sourcepath="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/sources/hadoop-mapreduce-client-core-2.7.3-sources.jar"/>
 	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-common-2.7.3.jar"/>
-	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-app-2.7.3.jar"/>
+	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/hadoop-mapreduce-client-app-2.7.3.jar" sourcepath="E:/soft-code/hadoop-2.7.3/share/hadoop/mapreduce/sources/hadoop-mapreduce-client-app-2.7.3-sources.jar"/>
 	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/common/lib/zookeeper-3.4.6.jar"/>
 	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/common/lib/xz-1.0.jar"/>
 	<classpathentry kind="lib" path="E:/soft-code/hadoop-2.7.3/share/hadoop/common/lib/xmlenc-0.52.jar"/>
