--- a/com.gyzh.zain.hive/.classpath
+++ b/com.gyzh.zain.hive/.classpath
@@ -110,5 +110,6 @@
 	<classpathentry kind="lib" path="lib/velocity-1.5.jar"/>
 	<classpathentry kind="lib" path="lib/xz-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/zookeeper-3.4.6.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-common-2.7.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
